# src/Shared/AuditLog/Api/Documentation/AuditLogCollectionResponseSchema.php
@@ -2,19 +2,19 @@
 
 declare(strict_types=1);
 
-namespace App\Shared\Activity\Api\Documentation;
+namespace App\Shared\AuditLog\Api\Documentation;
 
-use App\Shared\Activity\Resource\ActivityLogResource;
 use App\Shared\Api\Documentation\CollectionLinksSchema;
+use App\Shared\AuditLog\Resource\AuditLogResource;
 use Nelmio\ApiDocBundle\Attribute\Model;
 use OpenApi\Attributes as OA;
 
 #[OA\Schema(
     properties: [
         new OA\Property(property: 'links', ref: new Model(type: CollectionLinksSchema::class)),
-        new OA\Property(property: 'data', type: 'array', items: new OA\Items(ref: new Model(type: ActivityLogResource::class))),
+        new OA\Property(property: 'data', type: 'array', items: new OA\Items(ref: new Model(type: AuditLogResource::class))),
     ]
 )]
-final class ActivityLogCollectionResponseSchema
+final class AuditLogCollectionResponseSchema
 {
 }
